--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proxy-generics-taxjar",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Proxy Generic Taxjar.com",
   "homepage": "https://cali-style.com",
   "author": {
@@ -20,18 +20,17 @@
     "trailjs"
   ],
   "dependencies": {
-    "node-shipstation": "^0.1.1",
     "taxjar": "^1.4.1"
   },
   "devDependencies": {
-    "eslint": "^2.4",
-    "eslint-config-trails": "^2",
+    "eslint": "^3.0.0",
+    "eslint-config-trails": "^2.0.0",
     "lodash": "^4.11.1",
     "mocha": "^2.4.5",
     "smokesignals": "v2-latest",
     "supertest": "^2.0.1",
-    "trailpack-proxy-generics": "^0.0.16",
-    "trails": "v2-latest"
+    "trailpack-proxy-generics": "^0.0.21",
+    "trails": "^2.0.0"
   },
   "scripts": {
     "test": "eslint . && mocha"
